<resources>
    <string name="app_name">Talk</string>
    <string name="regNameHint">Full Name</string>
    <string name="regEmailHint">Email</string>
    <string name="regPassHint">Password</string>
    <string name="regPassConfirmHint">Confirm Password</string>
    <string name="login_button_text">Log In</string>
    <string name="login_signup_text"><u>New User?</u></string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">user.name@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home_nav">HomeNav</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_comment">Write Comment</string>
</resources>
